--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,14 +8,15 @@ import AboutMeSection from "@components/AboutMeSection.astro";
 ---
 
 <Layout
+  lang="en"
   title="Oswaldo Osuna - Full Stack Developer"
   description="My name is Oswaldo Adrian Osuna Rizo. Full stack developer from Queretaro, Mexico. Front end and back end. Working with Java, JavaScript, React, Vue. Oracle Cloud Infrastructure. GE Aerospace. Universidad Anáhuac Queretaro."
 >
   <main>
-    <MainSection />
-    <ProfessionalExperience />
-    <ProjectsSection />
-    <AchievementsSection />
-    <AboutMeSection />
+    <MainSection lang="en" />
+    <ProfessionalExperience lang="en" />
+    <ProjectsSection lang="en" />
+    <AchievementsSection lang="en" />
+    <AboutMeSection lang="en" />
   </main>
 </Layout>
