--- a/src/components/ProjectLinkButton.astro
+++ b/src/components/ProjectLinkButton.astro
@@ -4,7 +4,7 @@ const { href } = Astro.props;
 
 <a
   href={href}
-  target=”_blank”
+  target="_blank"
   class="text-gray-900 bg-white border border-gray-300
     focus:outline-none hover:bg-gray-100 focus:ring-4
     focus:ring-gray-200 font-medium rounded-lg
